Move jvm args to jvm.cfg