@@ -27,12 +27,6 @@
     <java.maxVersion>21</java.maxVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jvm.opens.args>
-      --add-opens=java.base/java.lang=ALL-UNNAMED
-      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-      --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-    </jvm.opens.args>
 
     <!-- Library dependencies Check for available updates: mvn versions:display-dependency-updates We make
         use of the Dropwizard BOM (Bill of materials) to manage versions for the major libraries which also imports
